--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  percent_indicator: ^4.2.5
 
 dev_dependencies:
   flutter_lints: ^5.0.0
