--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/cityxerpa/0.jpg
-    - assets/cityxerpa/1.jpg
+    - assets/cityxerpa/
     # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
